Kernel application loading was improved. Kebab notification z-index fixed. Application class name was changed to className.

--- a/web/assets/kebab/system/distributions/kebab-os/themes/default/kernel-debug.css
+++ b/web/assets/kebab/system/distributions/kebab-os/themes/default/kernel-debug.css
@@ -136,5 +136,5 @@ p.kebab-paragraph {
     right:35%;
     top:10px;
     width:300px;
-    z-index:20000;
+    z-index:8999;
 }
